--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <div class="container">loot available:
   <div id="boss-loot-list"></div>
 </div>
+<button id="reset-save">RESET SAVE</button>
 <span id="version">alpha v0.0.1</span>
 <script src="main.js"></script>
 </body>
