--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 
 <body>
 <div id="boss" class= "container">
-  <div id="boss-name">Boss # 1</div>
- 
    <div class="bar">
+      <div id="boss-name">Boss # 1</div>
     <div id="boss-hp-fill" class="fill"></div>
   </div>
   <div id="boss-hp-text"></div>
   <div id="loot-preview" class="container"></div>
-<div class="container">inventory <div class="container">dps: <span id="dpstext">1</span></div>
+<div class="container"><div class="container">dps: <span id="dpstext">1</span></div>
 <div id="inventory"></div>
 </div>
 </div>
