--- a/index.html
+++ b/index.html
@@ -5,48 +5,62 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>idle boss rpg</title>
 <link rel="stylesheet" href="style.css">
-</head>
 
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
+</head>
 <body>
-<div id="boss" class= "container">
-   <div class="bar">
-      <div id="boss-name">Boss # 1</div>
+
+<!-- BOSS & GAME UI -->
+<div id="boss" class="container">
+  <div class="bar">
+    <div id="boss-name">Boss # 1</div>
     <div id="boss-hp-fill" class="fill"></div>
   </div>
   <div id="boss-hp-text"></div>
   <div id="loot-preview" class="container"></div>
-<div class="container"><div class="container">dps: <span id="dpstext">1</span></div>
-<div id="inventory"></div>
+  <div class="container">
+    <div class="container">dps: <span id="dpstext">1</span></div>
+    <div id="inventory"></div>
+  </div>
 </div>
-</div>
-<div class="container">loot available:
+
+<div class="container">
+  loot available:
   <div id="boss-loot-list"></div>
 </div>
+
 <span id="version">alpha v0.0.1</span>
 
+<!-- CONTROL PANEL -->
 <div id="control-panel">
-
   <div id="control-header">
     <span>Boss controls</span>
     <button id="control-toggle">–</button>
   </div>
-
   <div id="control-content">
-
     <div class="stage-wrapper">
       <button id="stage-prev" class="stage-btn">◀</button>
       <button id="stage-next" class="stage-btn">▶</button>
     </div>
-
     <label class="repeat-container">
       <input type="checkbox" id="enable-reset">
       <span class="repeat-checkmark"></span>
       Repeat Boss
     </label>
-
   </div>
 </div>
 
+<!-- CHAT -->
+<div id="chat-container" class="container">
+  <div id="chat-messages" style="height:150px; overflow-y:auto; border:1px solid #888; padding:4px; background:#111; color:#fff; margin-bottom:4px;"></div>
+  <input type="text" id="chat-input" placeholder="Schreibe eine Nachricht..." style="width:70%; padding:4px;">
+  <button id="chat-send" style="width:25%; padding:4px;">Senden</button>
+</div>
+
+<!-- MAIN SCRIPT -->
 <script src="main.js"></script>
 </body>
 </html>
