--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
       </div>
       <div id="boss-hp-text"></div>
     </div>
-    <div id="dps-badge">
-      ⚔ <span id="dpstext">1</span> <span class="dps-label">DPS</span>
+    <div id="stats-row">
+      <div id="dps-badge">
+        ⚔ <span id="dpstext">1</span> <span class="dps-label">DPS</span>
+      </div>
+      <div id="shard-badge">
+        ✦ <span id="shardtext">0</span> <span class="dps-label">SHARDS</span>
+      </div>
     </div>
   </section>
 
