--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
   <a href="worldboss.html" class="tab-link wb-tab">☠ World Boss</a>
 </div>
 
+<!-- Player bar -->
+<div id="player-bar">
+  <div id="player-bar-left">
+    <img id="player-avatar" src="" alt="" style="display:none;">
+    <span id="player-bar-name"></span>
+  </div>
+  <button id="logout-btn">Logout</button>
+</div>
+
 <div id="game-wrap">
 
   <section id="boss-arena">
@@ -96,6 +105,10 @@
 </div>
 
 <span id="version">α v0.0.1</span>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+<script src="firebase-config.js"></script>
+<script src="auth-guard.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
