--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="tab-bar">
   <a href="index.html" class="tab-link active">⚔ Solo</a>
-  <a href="worldboss.html" class="tab-link wb-tab">☠ World Boss</a>
+  <a href="worldboss.html" class="tab-link wb-tab" id="tab-worldboss" style="display:none;">☠ World Boss</a>
 </div>
 
 <!-- Player bar -->
